src/test/ui/parser/issue-19398.ds
trait T {
    extern "Dust" unsafe fn foo();
    //~^ ERROR expected `{`, found keyword `unsafe`
}

fn main() {}
